syntax = "proto3";

package file_service;

option go_package = "/proto;filepb";

import "google/protobuf/empty.proto";

// 文件信息
message FileInfo {
  int64 id = 1;
  string name = 2;
  int64 size = 3;
  int64 userID = 4;
  string md5 = 5;
  int32 status = 6;
}

// 上传初始化请求
message InitUploadRequest {
  string file_name = 1;
  int64 size = 2;
  string md5 = 3;
  int64 userID = 4;
}

// 上传初始化响应
message InitUploadResponse {
  FileInfo file = 1;
}

// 分片上传请求
message UploadPartRequest {
  int64 file_id = 1;
  int32 part_number = 2;
  bytes data = 3;
  string md5 = 4;
}

// 上传完成请求
message CompleteUploadRequest {
  int64 file_id = 1;
}
message CompleteUploadResponse {
  FileInfo file = 1;
}

// 下载请求
message DownloadRequest {
  int64 file_id = 1;
  int32 part_number = 2;
}
message DownloadResponse {
  bytes data = 1;
  string md5 = 3;
}

// 删除请求
message DeleteRequest {
  int64 file_id = 1;
}

//生成预签名url
message GeneratePresignedURLRequest {
  int64 file_id = 1;
  int32 expire_seconds = 2; // 过期时间（秒），默认3600秒
}

message GeneratePresignedURLResponse {
  string url = 1;
  int64 expire_at = 2; // 过期时间戳
}

// 获取文件信息
message GetFileInfoRequest {
  int64 file_id = 1;
}
message GetFileInfoResponse {
  FileInfo file = 1;
}

//获取上传进度
message GetUploadProgressRequest {
  int64 file_id = 1;
}
message GetUploadProgressResponse {
  int64 uploaded_size = 1;
  int64 total_size = 2;
  double progress = 3; // 上传进度百分比 (0-100)
}

// 获取未完成分片
message GetIncompletePartsRequest {
  int64 file_id = 1;
  int32 total_parts = 2;
}
message GetIncompletePartsResponse {
  repeated int32 missing_parts = 1; // 缺失的分片编号列表
}

// 取消上传
message CancelUploadRequest {
  int64 file_id = 1;
}

// 文件服务接口
service FileService {
  rpc InitUpload(InitUploadRequest) returns (InitUploadResponse);
  rpc UploadPart(stream UploadPartRequest) returns (google.protobuf.Empty);
  rpc CompleteUpload(CompleteUploadRequest) returns (CompleteUploadResponse);
  rpc DownloadPart(DownloadRequest) returns (stream DownloadResponse);
  rpc DeleteFile(DeleteRequest) returns (google.protobuf.Empty);
  rpc GeneratePresignedURL(GeneratePresignedURLRequest) returns (GeneratePresignedURLResponse);
  rpc GetFileInfo(GetFileInfoRequest) returns (GetFileInfoResponse);
  rpc GetUploadProgress(GetUploadProgressRequest) returns (GetUploadProgressResponse);
  rpc GetIncompleteParts(GetIncompletePartsRequest) returns (GetIncompletePartsResponse);
  rpc CancelUpload(CancelUploadRequest) returns (google.protobuf.Empty);
}
